  - Add machine identification in configuration
  - Add variable ${RANDOM}[n] to config file in order to distinguish non unique hostnames
  - Refactor config variable handling
  - Fix config fails when restic password is an int
  - Fix empty config files did not show a proper error message
  - Fix various config file malformation will break execution

## v2.2.0 - rc1 - 02/02/2023
  - Added a full auto-upgrade solution:
    - Aupgrade client integrated into NPBackup, that can be called manually via --auto-upgrade or automatically run every n backups
    - Upgrade server which servers files and their metadata
  - Added a gui to create a scheduled task under Windows
  - Added a gui to configure backup admin password (was compile time setting before)
  - Improved setup.py to provide launch scripts for both Linux and Windows platforms
  - Made windows cloud file filter optional (enabled by default)
  - Added default configuration settings
  - Rewrite configuration gui into a tabbed gui
  - Updated restic binary to restic 0.15.1 compiled with go1.19.
  - Changed backup interval unit from seconds to minutes

## v2.1.0 - 29/01/2023
  - Added execution time information
  - Code cleanup
    - Refactor runner into a class
    - Refactor npbackup into package
    - Adding missing typing
    - Code is now formatted with black
    - Code must now pass pylint and flake8
  - Workaround for painfully slow sg.TreeData window.close()
  - Simplify npbackup shortcut
  - Shift default interval from 23H30 to 24H
  - Fixed missing translations for admin password popups

## v2.0.0 - 24/02/2023

  - First open public release
  - Refactor GUI so actions become non-blocking
    - Added loader animation for gui events
    - Added backup window with current state
    - Added internationalization support (currently en and fr)
  - Refactor restic.ls function to return a generator since restic ls command gives chunks of json, which is bad memory wise when parsing each chunk into a big list